# Pico-Green-Clock

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.Pico  CMakeLists.txt.PicoW  CalendarEventsGeneric.cpp  Ds3231.c  Ds3231.h  Pico-Clock-Green.c  Pico-Clock-Green.uf2  Pico-Clock-Green.uf2.PicoW  Pico-Green-Clock.c  Pico-Green-Clock.h  Pico-Green-Clock.uf2  Pico-Green-Clock.uf2.Pico  Pico-Green-Clock.uf2.PicoW  README.md  Readme.txt  RemindersGeneric.cpp  bitmap.h  cgi.c  cgi.h  debug.h  define.h  lwipopts.h  makefsdata.py  memorex.cpp  picow_ntp_client.c  picow_ntp_client.h  ssi.c  ssi.h
html_files/: index.shtml
